Fix audit log timestamp spacing

--- a/static/css/logs.css
+++ b/static/css/logs.css
@@ -77,7 +77,7 @@
 .logs-table-row,
 #logs-table-header {
     display: grid;
-    grid-template-columns: 200px 200px 15% 100px auto;
+    grid-template-columns: 220px 200px 15% 100px auto;
     padding: 5px;
     border-bottom: 1px solid #e0e0e0;
     cursor: pointer;
